# nutstosoup

./: CHANGELOG.md  README.md  api.py  pyproject.toml
examples/: api_example_live.json  api_example_mixtapes.json
nts_api_client/: __init__.py  __main__.py
nutstosoup/: __init__.py  __main__.py  models.py
tests/: __init__.py  test_api.py  test_models.py
