[project]
name = "nutstosoup"
version = "0.2.0"
description = "Nuts to Soup module for interacting with the NTS Radio API"
authors = []
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
